# Course-project

./: CMakeLists.txt  CMakePresets.json  main.cpp
.githib/workflows/: release.yml
.github/workflows/: release.yml
src/: main.cpp  palindrome.cpp  palindrome.h  tests.cpp
